[package]
name = "signaler"
version = "0.6.0"
authors = ["Artur Gwoździowski"]
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.23"
anyhow = "1.0"
rand = "0.10.1"
chrono = "0.4.44"
